# rusty-microservice

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.bare  Makefile  README.md  cloudbuild.yaml
benches/: example.rs  ffi_calls.rs  my_benchmark.rs
ffi-log2/: Cargo.toml  ffi-log2.h
ffi-log2/src/: lib.rs
hello/: Chart.yaml  values.yaml
hello/templates/: deployment.yaml  service.yaml
helm/rusty/: Chart.yaml  values-resources.yaml  values.yaml
helm/rusty/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/rusty/templates/tests/: test-connection.yaml
sample01/: Cargo.toml  build.rs  sample01.h
sample01/src/: lib.rs  simpleservice.rs
src/: k8slifecycle.rs  lib.rs  main.rs  multiread.rs  sample01.rs  sampleservice.rs  tcpthread.rs  uservice.rs
uservice/: Cargo.toml  build.rs  cbindgen.toml  uservice.h
uservice/benches/: uservice_callback.rs
uservice/src/: error.rs  ffi_service.rs  k8slifecycle.rs  lib.rs  picoservice.rs  simpleservice.rs  uservice.rs
