[package]
name = "rust_hello"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
atomic = "0.5"


[profile.release]
lto = true
codegen-units = 1