[package]
name = "uservice_run"
version = "0.1.0"
edition = "2021"
authors = ["Ben Greene <BenJGreene@gmail.com>"]

[workspace]

[dependencies]
env_logger = "0.9.0"
log = {version = "0.4.14", features = ["release_max_level_warn"]}
clap = "~3.0"
figment = { version = "~0.10", features = ["toml", "env"] }
uservice = { path = "uservice" }
sample01 = { path = "sample01" }
ffi-log2 = { path = "ffi-log2" }
libloading = { version = "~0.7" }


[dev-dependencies]
criterion = { version = "~0.3", features = ["async_tokio", "html_reports"] }


# [bin]
# name = "uservicestart"



[[bench]]
name = "ffi_calls"
harness = false
