[package]
name = "uservice_run"
version = "0.1.0"
edition = "2021"
authors = ["Ben Greene <BenJGreene@gmail.com>"]

[workspace]

[dependencies]
env_logger = "~0.9"
log = {version = "~0.4", features = ["release_max_level_info"]}
clap = "~3.0"
figment = { version = "~0.10", features = ["toml", "env"] }
uservice = { path = "uservice" }
sample01 = { path = "sample01" }
ffi-log2 = { path = "ffi-log2" }
libloading = { version = "~0.7" }
libc = { version = "~0.2" }
aquamarine = { version = "0.1.11" }

[dev-dependencies]
criterion = { version = "~0.3", features = ["async_tokio", "html_reports"] }



[[bench]]
name = "ffi_calls"
harness = false
