[package]
name = "sample01"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Breaking change in clap = 3.0.0-beta.4 from the README.md file
tokio = { version = "1", features = ["full"] }
warp = "0.3"
log = {version = "0.4.14", features = ["release_max_level_warn"]}
rand = "0.8.4"


[build-dependencies]
cbindgen = '*'

[profile.release]
lto = true
codegen-units = 1
# strip = true # Automatically strip symbols from the binary. (ONLY available in nightly)


[lib]
crate-type = [ "cdylib", "lib" ]
